2004-05-30  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreemodel.xml ("rows-reordered") Note that new_order is
	a gpointer value.

	* pygtk-gtktreeview.xml ("columns-changed") Fix confusing wording.
	("test-collapse-row") ("test-expand-row") Update return value 
	wording.

	* pygtk-gtktreedragdest.xml (row_drop_possible) Add missing word.
	
2004-05-29  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreeview.xml (set_column_drag_function) Add description
	of this PyGTK2.4 method.

	* pygtk-pygtkgenerictreemodel.xml (Description) Add self as
	a param to all the methods to be implemented and use rowref
	instead of iter to avoid confusion. Correct method name from
	on_get_iter_next() to on_iter_next()

	* pygtk-gtktreemodel.xml (iter_next) Fix description.

2004-05-28  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkpixbuf.xml (save)
	(gdk.pixbuf_new_from_file)
	(gdk.pixbuf_new_from_file_at_size)
	(gdk.pixbuf_new_from_inline) Note that GError exception is
	raised on error.

	* pygtk-gdkpixbufanimation.xml (gtk.gdk.PixbufAnimation) Note that
	GError exception is raised on error.

	* pygtk-gdkpixbufloader.xml (gtk.gdk.PixbufLoader)
	(gtk.gdk.pixbuf_loader_new_with_mime_type)
	(write) (close) Note that GError exception is raised on error.

	* pygtk-gtkiconinfo.xml (load_icon) Note that GError exception
	is raised on error.

	* pygtk-gtkicontheme.xml (load_icon) Note that GError exception
	is raised on error.

	* pygtk-gtkuimanager.xml (add_ui_from_string)
	(add_ui_from_file) Note that GError exception is raised on error.

	* pygtk-gtkwindow.xml (set_icon_from_file) Add.
	(gtk.window_set_default_icon_from_file) Note that GError exception
	is raised on error.

	* pygtk-gtkfilechooser.xml (add_shortcut_folder)
	(remove_shortcut_folder)
	(add_shortcut_folder_uri)
	(remove_shortcut_folder_uri) Note that GError exception is raised
	on error.

	* pygtk-pangoattrlist.xml (pango.parse_markup) Note that GError
	exception is raised on error.
