@@ -1,3 +1,8 @@
+2004-05-31  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gdkwindow.xml (add_filter) Add description of this PyGTK 2.2
+	method.
+
 2004-05-30  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktreemodel.xml ("rows-reordered") Note that new_order is
